[gd_scene load_steps=5 format=2]

[ext_resource path="res://hunter/Hunter.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.513089 )
colors = PoolColorArray( 1, 0.421875, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 50

[sub_resource type="CircleShape2D" id=3]
radius = 25.02

[node name="Hunter" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 50 )
texture = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="EatingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="RestTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="EatingTimer" to="." method="_on_EatingTimer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
